<resources>
    <string name="app_name">忆植</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="log_title_wzc">日志</string>
    <string name="search_text_wzc">搜索植物信息......</string>
    <string name="edit_log_group_wzc">修改分组信息</string>
    <string name="delete_log_group_wzc">删除分组</string>
    <string name="log_group_alter">点击以修改日志组信息</string>
    <string name="log_group_delete">点击以删除日志组</string>
    <string name="cancel_wzc">取消</string>
    <string name="alter_info_wzc">修改信息</string>
    <string name="hint_name_wzc">名称｜不超过10个字</string>
    <string name="hint_name_input_wzc">点击此处填写</string>
    <string name="hint_note_wzc">备注｜不超过15个字</string>
    <string name="hint_note_input_wzc">点击此处填写（可不填写）</string>
    <string name="make_sure_wzc">确认</string>
    <string name="new_group_wzc">新建分组</string>
    <string name="delete_group_wzc">删除分组</string>
    <string name="group_delete_hint_1_wzc">删除后将不可恢复！</string>
    <string name="date_picker_title_wzc">日期选择</string>
    <string name="back_to_today">回到今天</string>
    <string name="new_label_text_wzc">点击增加标签</string>
    <string name="no_label_wzc">暂无标签</string>
    <string name="log_text_hint">在此处写下这一天的记录......</string>
    <string name="new_log_pic_wzc">点击增加图片</string>
    <string name="delete_label_wzc">删除标签</string>
    <string name="delete_pic_wzc">删除图片</string>
    <string name="delete_label_hint_wzc">点击标签进行删除</string>
    <string name="delete_pic_hint_wzc">点击图片进行删除</string>
    <string name="day_picker_title_wzc">日期</string>
    <string name="analyzer_title_wzc">分析</string>
    <string name="ai_analyze_title_wzc">AI分析</string>
    <string name="status_diagram_title_wzc">状态分析</string>
    <string name="title_new_label_wzc">增加标签</string>
    <string name="subtitle_recently_used_label_wzc">最近使用的标签</string>
    <string name="label_type_status_wzc">状态</string>
    <string name="label_type_data_wzc">数值记录</string>
    <string name="label_type_diy_wzc">自定义</string>
    <string name="new_diy_label_wzc">点击新增自定义标签</string>
    <string name="temporarily_no_diy_labels">暂无自定义标签</string>
    <string name="delete_diy_label_wzc">删除自定义标签</string>
    <string name="title_new_diy_label_wzc">新增自定义标签</string>
    <string name="diy_label_type_status_wzc">状态标签</string>
    <string name="diy_label_type_data_wzc">数值记录标签</string>
    <string name="new_label_name_subtitle_wzc">标签名称｜不超过8个字符</string>
    <string name="new_diy_label_name_wzc">请输入名称</string>
    <string name="new_diy_label_unit_wzc">请输入单位名称</string>
    <string name="new_label_unit_subtitle_wzc">单位名称｜最多10个字符</string>
    <string name="hint_label_change_wzc">若该标签已存在，此次增加的标签将会覆盖旧标签的内容</string>
    <string name="hint_unit_input_wzc">请输入数值</string>
    <string name="label_extra_input_wzc">额外描述（不超过15个字）</string>
    <string name="status_1_wzc">好</string>
    <string name="status_2_wzc">较好</string>
    <string name="status_3_wzc">一般</string>
    <string name="status_4_wzc">较差</string>
    <string name="status_5_wzc">差</string>
    <string name="edit_personal_info_yzr">点击此处修改个人信息</string>
    <string name="todo_finished_times_yzr">待办完成次数</string>
    <string name="log_count_yzr">已记录条目数</string>
    <string name="alter_password_yzr">修改密码</string>
    <string name="settings_yzr">设置</string>
    <string name="password_edit_title_yzr">修改密码</string>
    <string name="input_origin_password_title_yzr">输入原密码</string>
    <string name="input_origin_password_here_hint">在此输入原密码</string>
    <string name="input_new_password_title_yzr">输入新密码</string>
    <string name="input_new_password_hint_yzr">在此输入新密码</string>
    <string name="new_password_format_hint_yzr">*至少8位的字母与数字混合，不含特殊符号</string>
    <string name="input_new_password_title_2_yzr">再次输入新密码</string>
    <string name="input_new_password_hint_2_yzr">在此再次输入新密码</string>
    <string name="alter_personal_info_title_yzr">修改个人信息</string>
    <string name="alter_avatar_title_yzr">头像｜点击修改</string>
    <string name="alter_name_title_yzr">昵称｜点击修改｜不少于5个字</string>
    <string name="alter_name_hint_yzr">在这里填写你的昵称</string>
    <string name="RelatedLog_zhj">相关日志</string>
    <string name="RelatedAgency_zhj">相关代办</string>
    <string name="login_zhj">登录</string>
    <string name="register_zhj">注册</string>
    <string name="ai_button_text_zhj">AI咨询</string>
    <string name="temperature_title_zhj">气温</string>
    <string name="rainfall_title_zhj">降雨量</string>
    <string name="humidity_title_zhj">湿度</string>
    <string name="wind_power_title_zhj">风力</string>
    <string name="next_division_zhj">下个节气</string>
    <string name="recently_edited_group_zhj">最近编辑</string>
    <string name="bad_weather_alarm_title_zhj">恶劣天气预警</string>
    <string name="todo_title_chl">待办</string>
    <string name="manage_all_todos_chl">管理所有待办</string>
    <string name="today_todos_chl">今日进度</string>
    <string name="unfinished_todos_subtitle_chl">未完成</string>
    <string name="finished_todos_subtitle_chl">已完成</string>
    <string name="search_hint_zhj">输入搜索内容...</string>
    <string name="splash_subtitle_zhj">记录与植物的点点滴滴</string>
    <string name="automatic_login_zhj">自动登录</string>
    <string name="please_enter_username_zhj">请输入用户名</string>
    <string name="please_enter_password_zhj">请输入密码</string>
    <string name="off_zhj">关闭</string>
    <string name="password_register_hint_zhj">密码：至少8位的英文与数字组合</string>
    <string name="please_enter_password_again_zhj">请再次输入密码以确认</string>
    <string name="new_todo_chl">新增待办</string>
    <string name="never_ends_chl">永不结束</string>
    <string name="choose_time_to_end_chl">选择结束时间</string>
    <string name="end_time_subtitle_chl">结束时间</string>
    <string name="stop_pick_up_time_chl">不可选择结束日期</string>
    <string name="allow_pick_up_time_chl">请选择结束日期</string>
    <string name="picked_time_chl">已选择</string>
    <string name="no_time_chl">----</string>
    <string name="todo_content_subtitle_chl">待办内容｜不超过15个字</string>
    <string name="todo_content_hint_chl">请输入待办的内容</string>
    <string name="time_division_subtitle_chl">提醒时间间隔｜可填写0~365天</string>
    <string name="group_binding_chl">是否绑定日志组</string>
    <string name="unit_of_day_division_chl">天</string>
    <string name="All_todos_title_chl">所有待办</string>
    <string name="hint_subtitle">点击待办即可查看/修改其信息</string>
    <string name="delete_todo_chl">删除待办</string>
    <string name="alter_todos_chl">停用或复用待办</string>
    <string name="finish_chl">完成</string>
    <string name="no_enabled_todo_rightnow_chl">暂无启用的待办</string>
    <string name="no_invalid_todos_rightnow_chl">暂无停用的待办</string>
    <string name="enable_todo_subtitle_chl">已启用</string>
    <string name="invalid_todo_subtitle_chl">已停用</string>
    <string name="chat_title">对话</string>
    <string name="only_for_refer_chl">仅供参考</string>
    <string name="back_to_main_chl">返回主页</string>
    <string name="ai_chat_hint_chl">输入想咨询的问题...</string>
    <string name="hint_ai_generating_chl">思考中...</string>
    <string name="on_zhj">打开</string>
    <string name="log_out">登出</string>
    <string name="log_out_hint_wzc">您正在尝试登出，请问您是否确认？</string>
    <string name="log_out_no_auto_login_hint_wzc">登出后，将会自动关闭“自动登录”功能</string>
    <string name="no_recently_used_label">暂无最近使用的标签</string>
    <string name="record_temp_wzc">点击此处记录温度</string>
    <string name="pick_sys_notify_time_wzc">是否启用系统通知</string>
    <string name="today_no_todo">今日暂无需要完成的待办</string>
</resources>