<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/bg_res_4"
        android:scaleType="centerCrop"
        />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="395dp"
        app:cardCornerRadius="30dp"
        app:cardBackgroundColor="@color/white0.7_zhj"
        app:cardElevation="0dp"
        android:layout_marginBottom="40dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:id="@+id/login_title_bg"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="32sp"
        android:text="@string/register_zhj"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="25dp"
        android:textColor="@color/themeDarkGreen"
        android:textStyle="bold"
        android:layout_marginBottom="5dp"
        app:layout_constraintTop_toTopOf="@id/login_title_bg"
        android:paddingStart="20dp"
        android:paddingEnd="0dp"
        android:id="@+id/title_text"
        />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="323dp"
        app:cardCornerRadius="30dp"
        app:cardBackgroundColor="@color/white0.7_zhj"
        app:cardElevation="0dp"
        android:id="@+id/option_and_input_bg"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toBottomOf="@id/title_text"
        android:layout_marginTop="5dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="@id/option_and_input_bg"
        android:paddingHorizontal="20dp"
        android:paddingTop="10dp"
        android:id="@+id/input_area"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:hint="@string/please_enter_username_zhj"
            android:id="@+id/setUsername"
            android:textColorHint="@color/general_grey_wzc"
            android:background="@android:color/transparent"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:maxLines="1"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/themeDarkGreen"
            android:translationY="-8dp"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:hint="@string/please_enter_password_zhj"
            android:id="@+id/setPassword"
            android:textColorHint="@color/general_grey_wzc"
            android:background="@android:color/transparent"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:maxLines="1"
            android:inputType="textPassword"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/themeDarkGreen"
            android:translationY="-8dp"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:hint="@string/please_enter_password_again_zhj"
            android:id="@+id/confirmPassword"
            android:textColorHint="@color/general_grey_wzc"
            android:background="@android:color/transparent"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:maxLines="1"
            android:inputType="textPassword"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/themeDarkGreen"
            android:translationY="-8dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password_register_hint_zhj"
            android:textSize="14sp"
            android:textColor="@color/themeDarkGreen"
            android:layout_gravity="center"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/input_area"
        android:id="@+id/option_area"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        >
        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="50dp"
            app:cardCornerRadius="15dp"
            android:layout_marginEnd="25dp"
            android:id="@+id/cardViewAutoLogin"
            app:cardElevation="0dp"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="center"
                android:id="@+id/autoLoginTransfer"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/automatic_login_zhj"
                    android:layout_marginEnd="10dp"
                    android:textSize="16sp"
                    android:textColor="@color/themeDarkGreen"
                    android:textStyle="bold"
                    android:id="@+id/autoLogin"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/off_zhj"
                    android:textSize="16sp"
                    android:id="@+id/transfer"
                    />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/touch_layer_automatic_login"
                android:background="@android:color/transparent"
                />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="50dp"
            app:cardCornerRadius="15dp"
            app:cardElevation="0dp"
            app:cardBackgroundColor="@color/themeDarkGreen"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/make_sure_wzc"
                android:textSize="16sp"
                android:textStyle="bold"
                android:gravity="center"
                android:textColor="@color/white0.9_zhj"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:id="@+id/confirmLogin"
                />
        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:cardCornerRadius="30dp"
        android:layout_marginTop="25dp"
        app:cardElevation="0dp"
        app:layout_constraintTop_toBottomOf="@id/option_area"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        >
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/icon_goto_login_zhj"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="1dp"
            android:layout_marginStart="25dp"
            android:layout_gravity="center_vertical|start"
            android:padding="1dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/themeDarkGreen"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/login_zhj"
            android:layout_marginStart="60dp"
            android:layout_gravity="center_vertical|start"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:id="@+id/gotoLogin_zhj"/>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
