<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="30dp"
    app:layout_constraintTop_toTopOf="parent"
    app:cardElevation="0dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="20dp"
            android:id="@+id/title_area"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/sub1"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="请注意"
                android:textColor="@color/themeDarkGreen"
                android:textSize="22sp"
                android:id="@+id/label_title"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="10dp"/>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="20"
            android:text="@string/log_out_hint_wzc"
            android:textColor="@color/themeDarkGreen"
            android:paddingStart="21dp"
            android:paddingEnd="0dp"
            android:textSize="16sp"
            android:id="@+id/sub1"
            app:layout_constraintTop_toBottomOf="@id/title_area"
            app:layout_constraintStart_toStartOf="parent"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="20"
            app:layout_constraintTop_toBottomOf="@id/sub1"
            android:textSize="14sp"
            android:paddingStart="21dp"
            android:paddingEnd="0dp"
            android:text="@string/log_out_no_auto_login_hint_wzc"
            android:layout_marginTop="5dp"
            app:layout_constraintStart_toStartOf="parent"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="end"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="10dp"
            android:id="@+id/button_area">

            <TextView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:text="@string/cancel_wzc"
                android:textSize="16sp"
                android:textColor="@color/themeDarkGreen"
                android:gravity="center"
                android:id="@+id/cancel"
                android:paddingBottom="5dp"/>

            <TextView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:textColor="@color/themeRed"
                android:textSize="16sp"
                android:text="@string/make_sure_wzc"
                android:gravity="center"
                android:id="@+id/make_sure"
                android:paddingBottom="5dp"
                android:layout_marginStart="10dp"/>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>

